[project]
name = "axiomflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-environ>=0.12.0",
    "fastapi>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11",
]
