[project]
name = "axiomflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
    "django>=5.2",
    "django-environ>=0.12.0",
    "fastapi>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
]

[project.scripts]
axiomflow = "axiomflow.cli.init:cli"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11",
]
